--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Parallax-universe by rudyhuynh</title>
+    <title>Rudy Huynh</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -11,10 +11,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Parallax-universe</h1>
-      <h2 class="project-tagline">.</h2>
-      <a href="https://github.com/rudyhuynh/parallax-universe" class="btn">View on GitHub</a>
-      <a href="https://github.com/rudyhuynh/parallax-universe/zipball/master" class="btn">Demo</a>
+      <h1 class="project-name">Rudy Huynh</h1>
     </section>
 
     <section class="main-content">
